--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .principal {
-    background-image: url(imagens/Background.png);
+    background-image: url(Background.png);
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
